Enhance scorecards to now include the tool version most everywhere the tool name is listed. This will allow people to produce scorecards using multiple versions of the same tool.